# cpp

./: 2.cpp  file  lab_02.cpp  lab_03.cpp
lab_01/: 1.cpp  file  file3.txt  file4.txt  file5.txt
lab_04/: main.cpp
lab_04/game/: CMakeLists.txt  cell.cpp  cell.h  field.cpp  field.h  functions.cpp  functions.h  game.cpp  game.h  step.cpp  step.h
lab_04/strategies/: CMakeLists.txt  computer1.cpp  computer1.h  computer2.cpp  computer2.h  computer_interface.cpp  computer_interface.h  human.cpp  human.h  interface.h
